--- a/README
+++ b/README
@@ -1,38 +1,32 @@
 00000000011111111112222222222333333333344444444445555555555666666666677777777778
 12345678901234567890123456789012345678901234567890123456789012345678901234567890
-       ______ ___ __   _  _____ _    _       ______  _____ ___ _____ _   _
-       |_____  |  | \  | |  ___ |    | |     |____| |____/  |    |    \_/  
-       _____| _|_ |  \_| |____| |____| |____ |    | |   \_ _|_   |     |   
-                                               _  _ _ ____ _  _ ____ ____
-                                                \/  | |=== |/\| |=== |--<
 
-Sin-gu-la-ri-ty (noun) - a distinctive feature, a uniqueness; a point at which
-continuity breaks up; a point in history at which machine becomes smarter than 
-humanity and/or fuses with it indivisively; or simply a cool sounding word with 
-the initials S.G. in it :)
-	
-Singularity Viewer is a SecondLife(tm) protocol compatible client application.
+    ____             __             _    ___                       
+   / __ \___  ____  / /__  _  __   | |  / (_)__ _      _____  _____
+  / /_/ / _ \/ __ \/ / _ \| |/_/   | | / / / _ \ | /| / / _ \/ ___/
+ / _, _/  __/ /_/ / /  __/>  <     | |/ / /  __/ |/ |/ /  __/ /    
+/_/ |_|\___/ .___/_/\___/_/|_|     |___/_/\___/|__/|__/\___/_/     
+          /_/
+
+Replex Viewer is a SecondLife(tm) protocol compatible client application.
 It can be used to access SecondLife services as well as a number of others such
 as those based upon the OpenSim platform.
 
-Singularity is maintained by a small group of volunteers who can be contacted
-both, in-world (SingularityViewer group) as well as on IRC (#SingularityViewer
-@ FreeNode). Bug requests and features requests can be submitted through our
-Issue Tracker (http://code.google.com/p/singularity-viewer/issues/list or from
-the viewer menu: Help --> Bug Reporting --> Singularity Issue Tracker...)
+Replex developer can be contacted in-world (Replex group) as well as on IRC
+(#replex on FreeNode). Bug requests and features requests can be submitted
+through our JIRA at http://jira.openmetaverse.org/browse/REPLEX or from
+the viewer menu: Help --> Bug Reporting --> Replex Issue Tracker...)
 
+For additional information please visit the project web page at:
 
-As this Readme grows out of date, please refer to 
-
-	http://www.singularityviewer.org/about
-
+http://www.replex.org/
 
 00000000011111111112222222222333333333344444444445555555555666666666677777777778
 12345678901234567890123456789012345678901234567890123456789012345678901234567890
 
 History
 
-The Singularity viewer was started by Siana Gearz in November 2010 by forking it
-from the Ascent Viewer, by Balseraph Software Group, which in turn was based upon
-source code modified from the snowglobe source code released by Linden Lab.
+Replex Viewer is based on the Singularity Viewer source code which was forked
+from Ascent Viewer that was derived from Linden Lab's own Snowglobe Viewer
+which was an opensource variant of the mainline Second Life 1.x viewer.
 
